# locus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.sh
.github/workflows/: deploy-pages.yml
docs/: CNAME  README.md  architecture.md  core-data-atlas.html  deployment-operations.html  deployment.md  docs.html  index.html  locus_sdk_rs_recursive_composite_guide.md  quickstart.html  robots.txt  sdk-architecture.md  sdk-systems-map.html  sitemap.xml  troubleshooting.md
docs/book/: mermaid-init.js  mermaid-overrides.css
docs/book/src/: README.md  SUMMARY.md  agent-blueprints.md  architecture.md  core-database-schema.md  deployment.md  integration.md  operations.md  orchestration-cookbook.md  sdk-architecture.md  sttp_typed_ir_language_spec.md  versioning.md
locus-cli/: Cargo.toml  README.md  build.sh
locus-cli/src/: main.rs
locus-core/: CHANGELOG.md  Cargo.toml  README.md  build-package.sh  publish-crates.sh
locus-core-rs/: CHANGELOG.md  Cargo.toml  README.md  build-package.sh  prod-bug.json  publish-crates.sh
locus-core-rs/src/: lib.rs
locus-core-rs/src/application/services/: context_query_service.rs  mod.rs  monthly_rollup_service.rs  store_context_service.rs
locus-core-rs/src/domain/: mod.rs  models.rs
locus-core-rs/src/parsing/: sttp_node_parser.rs
locus-core-rs/src/storage/: mod.rs
locus-core-rs/tests/: context_query_service_tests.rs  end_to_end_parsing_tests.rs  in_memory_sync_tests.rs  monthly_rollup_service_tests.rs  parser_differential_tests.rs  parser_tests.rs  surrealdb_node_store_tests.rs  surrealdb_runtime_tests.rs  sync_coordinator_service_tests.rs  validator_tests.rs
locus-core/src/: lib.rs
locus-core/src/application/: mod.rs
locus-core/src/application/services/: calibration_service.rs  monthly_rollup_service.rs  store_context_service.rs
locus-core/src/parsing/: mod.rs
locus-core/src/storage/surrealdb/: runtime.rs
locus-core/tests/: context_query_service_tests.rs  end_to_end_parsing_tests.rs  in_memory_sync_tests.rs  monthly_rollup_service_tests.rs  parser_differential_tests.rs  parser_tests.rs  surrealdb_node_store_tests.rs  surrealdb_runtime_tests.rs  sync_coordinator_service_tests.rs  validator_tests.rs
locus-gateway/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build-image.sh  build.sh
locus-gateway/scripts/: integration-smoke.sh  predeploy-check.sh
locus-gateway/src/: app_state.rs  gateway.rs  gateway_args.rs  main.rs  orchestration.rs  providers.rs  surreal_client.rs  tenant.rs
locus-gateway/testdata/: sttp_gateway_refactor_momentum_node.md
locus-mcp/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build-image.sh  build.sh
locus-mcp/src/: composition.rs  main.rs  shared.rs
locus-mcp/src/tools/: calibrate_session.rs  create_monthly_rollup.rs  get_context.rs  get_moods.rs  get_schema.rs  list_nodes.rs  mod.rs  preview_embedding_migration.rs  run_embedding_migration.rs  store_context.rs
locus-sdk/: Cargo.toml  README.md  publish-crates.sh
locus-sdk/examples/: full_end_to_end.rs  generate_faker_fixture.rs  memory_composition.rs  provider_registry_setup.rs  recursive_composite_pipeline.rs
locus-sdk/src/: lib.rs  prelude.rs
locus-sdk/src/application/: ai_router.rs  memory_aggregate.rs  memory_composition.rs  memory_explain.rs  memory_filters.rs  memory_find.rs  memory_recall.rs  memory_schema.rs  memory_transform.rs  mod.rs
locus-sdk/src/domain/: ai.rs  memory.rs  mod.rs
locus-sdk/src/infrastructure/: embeddings.rs  mod.rs  registry.rs
locus-sdk/src/infrastructure/genai_adapter/: provider.rs
locus-sdk/src/infrastructure/sttp_native/: embedding_provider_adapter.rs
locus-sdk/src/interface/: dto.rs  mod.rs
locus-sdk/src/testing/: mod.rs
locus-web/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js
locus-web/scripts/: sync-rustdocs.sh
locus-web/src/lib/components/: AppNav.svelte
locus-web/src/routes/: +layout.svelte  +page.svelte
locus-web/src/routes/deployment-operations/: +page.svelte
locus-web/src/routes/docs/: +page.svelte
locus-web/src/routes/quickstart/: +page.svelte
locus-web/static/: CNAME  robots.txt  sitemap.xml
locus-web/static/docs/: README.md  architecture.md  build-technical-docs.sh  core-data-atlas.html  core-database-schema.md  deployment-operations.html  deployment.md  examples.md  index.html  integration.md  locus_sdk_rs_recursive_composite_guide.md  operations.md  quickstart.html  robots.txt  sdk-architecture.md  sdk-systems-map.html  security.md  sitemap.xml  versioning.md
locus-web/static/docs/book/: book.toml
locus-web/static/docs/book/src/: architecture.md  cookbooks-overview.md  core-database-schema.md  deployment.md  environment-setup.md  examples.md  orchestration-cookbook.md  troubleshooting.md  (+1 more)
locus-web/static/docs/technical/: index.html
scripts/: docs-lint.sh
(+23 files in other folders)
