[package]
name = "locus-gateway"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[features]
default = []
local-embedding = ["locus-sdk/local-embedding"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "3", default-features = false, features = ["protocol-http", "protocol-ws", "kv-surrealkv", "rustls", "kv-mem"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-reflection = "0.12"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
locus-core-rs = { path = "../locus-core-rs" }
locus-sdk = { path = "../locus-sdk" }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
