[package]
name = "locus-mcp"
version = "0.1.0"
edition = "2024"

[features]
default = []
local-embedding = ["locus-sdk/local-embedding"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
rmcp = { version = "1.6.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
locus-core-rs = { path = "../locus-core-rs" }
surrealdb = { version = "3", default-features = false, features = ["protocol-http", "protocol-ws", "kv-surrealkv", "rustls", "kv-mem"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
locus-sdk = { path = "../locus-sdk" }
