[package]
name = "locus-sdk"
version = "0.1.0"
edition = "2024"
description = "SDK-first STTP memory primitives and AI provider abstraction"
license = "Apache-2.0"
readme = "README.md"
keywords = ["sttp", "memory", "sdk", "ai", "embeddings"]
categories = ["asynchronous"]

[features]
default = ["genai-provider"]
genai-provider = ["dep:genai"]
local-embedding = [
	"dep:candle-core",
	"dep:candle-nn",
	"dep:candle-transformers",
	"dep:hf-hub",
	"dep:tokenizers",
	"dep:tokio",
]

[dependencies]
anyhow = "1"
async-trait = "0.1"
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
fake = { version = "5", features = ["derive"] }
genai = { version = "0.5.0", optional = true }
hf-hub = { version = "0.4", optional = true }
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
locus-core-rs = { path = "../locus-core-rs" }
thiserror = "2"
tokenizers = { version = "0.21", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
